# OpenCloning-submission

./: .gitignore  _models.py  build_command.sh  dummy.py  dummy2.py  get_kit_info.html  index.html  index.json  main.py  models.py  process_submission.py  pyproject.toml  re_process.py  render.yaml  scrape.py  settings.json  submission_reader.py  submit_to_github.py  test_submission_reader.py  update_index.py
.github/workflows/: submission.yml
docs/: index.md
example_submission/: sb500366v_si_001_2.xlsx
example_submission/other_files/: YTK_Parts.xls  submission_steps.txt
glyphs/: adapters.key  goldenPICS.key  ytk.key  ytk_ysd.key
processed/allele-engineering-templates/: submission.json
processed/allele-engineering-templates/templates/: pcr_based_targeting.json
processed/browse-article-28244182/: submission.json
processed/kits-densmore-cidar-moclo/: submission.json
processed/kits-gasser-goldenpics/: submission.json
processed/kits-moclo-ytk/: submission.json
processed/kits-murray-cidar-moclo-v1/: submission.json
processed/kits-young-moclo-ysd/: submission.json
static/: bootstrap.min.js  common.css  get_kit_info.js  index.js
submissions/base_branch_name/: submitted_spreadhseet.xlsx
submissions/browse-article-28244182/: submission.xlsx
submissions/kits-densmore-cidar-moclo/: submission.xlsx
submissions/kits-gasser-goldenpics/: submission.xlsx
submissions/kits-moclo-ytk/: submission.xlsx
submissions/kits-murray-cidar-moclo-v1/: submission.xlsx
submissions/kits-young-moclo-ysd/: submission.xlsx
templates/: submission_pr_template.md.jinja
(+27 files in other folders)
