[tool.poetry]
name = "opencloning-submission"
version = "0.1.0"
description = ""
authors = ["Manuel Lera-Ramirez <manulera14@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pygithub = "^2.3.0"
playwright = "^1.44.0"
pandas = "^2.2.2"
openpyxl = "^3.1.3"
jinja2 = "^3.1.4"
pydna = "^5.2.0"
opencloning-linkml = {git = "https://github.com/OpenCloning/OpenCloning_LinkML", rev = "change-linking-between-entities"}


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
